--- a/package.json
+++ b/package.json
@@ -3,28 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.3.1",
-    "apollo-link-ws": "^1.0.17",
-    "axios": "^0.18.0",
-    "classnames": "^2.2.6",
-    "formik": "^1.5.1",
-    "graphql": "^14.1.1",
-    "graphql-tag": "^2.10.1",
-    "moment": "^2.24.0",
-    "react": "^16.8.4",
-    "react-apollo": "^2.5.2",
-    "react-apollo-hooks": "^0.4.3",
-    "react-dom": "^16.8.4",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "react-textarea-autosize": "^7.1.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
-    "store2": "^2.7.1",
-    "subscriptions-transport-ws": "^0.9.16"
+    "@apollo/client": "^3.7.2",
+    "axios": "^1.2.1",
+    "classnames": "^2.3.2",
+    "formik": "^2.2.9",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "graphql-ws": "^5.11.2",
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.4.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "store2": "^2.14.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3006  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
