--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.2",
+    "@stagewise-plugins/react": "^0.6.1",
+    "@stagewise/toolbar-react": "^0.6.1",
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
