--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.11.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
