Add multi chat creation

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "store2": "^2.14.2"
   },
   "scripts": {
-    "start": "PORT=3006  react-scripts start",
+    "start": "source .env && PORT=3006  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
