Use styled components and remove css files

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-textarea-autosize": "^8.4.0",
-    "store2": "^2.14.2"
+    "store2": "^2.14.2",
+    "styled-components": "^6.1.19"
   },
   "scripts": {
     "start": "vite --port 3006",
